# novelai-api

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_TEMPLATE.md  TODO.md  genindex.html  index.html  novelai_api.BanList.html  novelai_api.BiasGroup.html  novelai_api.GlobalSettings.html  novelai_api.Idstore.html  novelai_api.ImagePreset.html  novelai_api.Keystore.html  novelai_api.NovelAIError.html  novelai_api.NovelAI_API.html  novelai_api.Preset.html  novelai_api.SchemaValidator.html  novelai_api.StoryHandler.html  novelai_api.Tokenizer.html  novelai_api.html  novelai_api.python_utils.html  novelai_api.utils.html  noxfile.py  noxfile_utils.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  shields.json  test.py
.github/workflows/: codeql-analysis.yml  publish.yaml  python-package.yml  sphinx.yml  stale.yml
_modules/: index.html
_modules/example/: boilerplate.html
_modules/novelai_api/: BanList.html  BiasGroup.html  GlobalSettings.html  Idstore.html  ImagePreset.html  Keystore.html  NovelAIError.html  NovelAI_API.html  Preset.html  SchemaValidator.html  StoryHandler.html  Tokenizer.html  _high_level.html  _low_level.html  python_utils.html  utils.html
_modules/tests/api/: boilerplate.html  test_decrypt_encrypt_integrity_check.html  test_textgen_presets.html
_sources/: index.rst.txt  novelai_api.GlobalSettings.rst.txt  novelai_api.Idstore.rst.txt  novelai_api.NovelAIError.rst.txt  novelai_api.Preset.rst.txt  novelai_api.rst.txt
_sources/example/: example.boilerplate.rst.txt
_sources/novelai_api/: Full_list_of_modules.md.txt  novelai_api.BiasGroup.rst.txt  novelai_api.Keystore.rst.txt  novelai_api.NovelAIError.rst.txt  novelai_api.NovelAI_API.rst.txt  novelai_api.high_level.rst.txt  novelai_api.low_level.rst.txt  novelai_api.rst.txt
_sources/tests/api/: api.rst.txt
_sources/tests/mock/: mock.rst.txt
_static/: documentation_options.js
_static/js/: hoverxref.js
docs/: requirements.txt
docs/source/: conf.py  index.rst  novelai_api.BanList.rst  novelai_api.BiasGroup.rst  novelai_api.ImagePreset.rst  novelai_api.Keystore.rst  novelai_api.NovelAI_API.rst  novelai_api.SchemaValidator.rst  novelai_api.StoryHandler.rst  novelai_api.Tokenizer.rst  novelai_api.python_utils.rst  novelai_api.utils.rst
docs/source/example/: example.rst
docs/source/novelai_api/: Full_list_of_modules.md  novelai_api.BanList.rst  novelai_api.GlobalSettings.rst  novelai_api.Idstore.rst  novelai_api.ImagePreset.rst  novelai_api.Preset.rst  novelai_api.SchemaValidator.rst  novelai_api.StoryHandler.rst  novelai_api.Tokenizer.rst  (+2 more)
example/: README.md  boilerplate.py  download_last_story_and_decrypt.py  download_modules.py  download_presets.py  download_shelves.py  download_stories.py  download_stories_and_content.py  example.boilerplate.html  example.html  generate.py  generate_controlnet_masks.py  generate_image.py  generate_image_test_controlnet.py  generate_image_test_samplers.py  generate_image_test_upscale.py  generate_image_v4.py  generate_image_v4_with_vibe.py  generate_image_with_controlnet.py  generate_image_with_director_tools.py  generate_image_with_img2img.py  generate_image_with_inpainting.py  generate_image_with_vibe.py  generate_text.py  generate_voice.py  generate_with_persistent_token.py  login.py  login_with_proxy.py  suggest_tags.py  tts.py  unpack_document.py  upscale_image.py
novelai_api/: BanList.py  BiasGroup.py  DirectorToolsPreset.py  FakeClientSession.py  Full_list_of_modules.html  GlobalSettings.py  Idstore.py  ImagePreset.py  ImagePreset_CostTables.py  Keystore.py  Msgpackr_Extensions.py  NovelAIError.py  NovelAI_API.py  Preset.py  SchemaValidator.py  StoryHandler.py  Tokenizer.py  __init__.py  __main__.py  _high_level.py  _low_level.py  novelai_api.BanList.html  novelai_api.BiasGroup.html  novelai_api.GlobalSettings.html  novelai_api.Idstore.html  novelai_api.ImagePreset.html  novelai_api.Keystore.html  novelai_api.NovelAIError.html  novelai_api.NovelAI_API.html  novelai_api.Preset.html  novelai_api.SchemaValidator.html  novelai_api.StoryHandler.html  novelai_api.Tokenizer.html  novelai_api.high_level.html  novelai_api.html  novelai_api.low_level.html  novelai_api.utils.html  poetry_scripts.py  python_utils.py  scripts.py  (+3 more)
novelai_api/msgpackr/: extensions.py  novelai.py  unpacker.py
novelai_api/schemas/: schema_AccountInformationResponse.json  schema_AiModuleDto.json  schema_AiModuleDtos.json  schema_GetKeystoreResponse.json  schema_ObjectsResponse.json  schema_PriorityResponse.json  schema_SubscriptionResponse.json  schema_SuccessfulLoginResponse.json  schema_UserAccountDataResponse.json  schema_UserData.json  schema_encrypted_stories.json  schema_keystore_b64.json  schema_keystore_decrypted.json  schema_keystore_encrypted.json  schema_keystore_setter.json  schema_login.json
novelai_api/templates/: template_empty_story.txt  template_empty_storycontent.txt
novelai_api/tokenizers/: gpt2-genji_tokenizer.json  pile_tokenizer.json  simple_tokenizer.py
schemas/: schema_encrypted_stories.json  schema_keystore_b64.json  schema_keystore_setter.json  schema_login.json
tests/: decrypt_encrypt_integrity_check.py  disabled_test_manipulate_stories.py  fflate_inflate.js  test.py  test_decrypt_encrypt_integrity_check.py  test_generate.py  test_generate_no_opus.py  test_generate_opus.py  test_generate_parallel.py  test_manipulate_stories.py
tests/api/: README.md  api.boilerplate.html  api.html  boilerplate.py  conftest.py  disabled_test_manipulate_stories.py  disabled_test_textgen_sanity.py  fflate_inflate.js  older_imagegen_samplers.py  test_decrypt_encrypt_integrity_check.py  test_generate.py  test_generate_parallel.py  test_imagegen_samplers.py  test_msgpackr.py  test_novelaiunpacker.py  test_sync_gen.py  test_textgen_presets.py  test_textgen_sanity.py
tests/mock/: mock.html
tools/: account_sanity_checker.py  boilerplate.py  decode.py  delete_remote_stories.py  download_all_stories.py  dump_story_template.py  get_access_key.py  get_access_token.py
(+115 files in other folders)
