[tool.poetry]
name = "novelai-api"
version = "0.10.1"
description = "Python API for the NovelAI REST API"
license = "MIT"
authors = ["Aedial <aedial.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Aedial/novelai-api"
keywords = ["python", "NovelAI", "NAI", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [{include = "novelai_api"}]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
argon2-cffi = "^21.3.0"
PyNaCl = "^1.5.0"
jsonschema = "^4.17.0"
tokenizers = "^0.13.1"
ftfy = "^6.1.1"
regex = "^2022.10.31"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.1"
pytest-xdist = "^3.0.2"

[tool.bandit]
exclude_dirs = ["tests/test_decrypt_encrypt_integrity_check.py"]
skips = ["B101", "B311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
