[tool.poetry]
name = "novelai-api"
version = "0.13.0"
description = "Python API for the NovelAI REST API"
license = "MIT"
authors = ["Aedial <aedial.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Aedial/novelai-api"
keywords = ["python", "NovelAI", "NAI", "API"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [{include = "novelai_api"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Aedial/novelai-api/issues"

[tool.poetry.dependencies]
python = ">=3.7.2,<3.12"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
argon2-cffi = "^21.3.0"
PyNaCl = "^1.5.0"
jsonschema = "^4.17.0"
tokenizers = "^0.13.1"
ftfy = "^6.1.1"
regex = "^2022.10.31"
sentencepiece = "^0.1.98"
poetry = "^1.4.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pre-commit = "^2.21.0"
pylint = "^2.15.5"
pytest = "^7.3.1"
pytest-asyncio = "^0.20.1"
pytest-randomly = "^3.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
# patched repo to work with relative links
myst_parser = {git = "https://github.com/Aedial/MyST-Parser", rev = "adcdb9a"}
linkify-it-py = "^2.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-last-updated-by-git = "^0.3.4"
sphinx-hoverxref = "^1.3.0"

[tool.flake8]
# TODO: add flake when supports come (https://github.com/PyCQA/flake8/issues/234)

[tool.bandit]
exclude_dirs = ["tests/api/test_decrypt_encrypt_integrity_check.py"]
skips = ["B101", "B311"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]
max-line-length = 120
ignore-paths = [
    # Code imported as is
    "novelai_api/tokenizers",
    # Code unused atm
    "novelai_api/StoryHandler.py",
    "tests/api/disabled_test_manipulate_stories"
]
disable = [
    # access to private members
    "W0212",
    # FIXMEs and TODOs
    "W0511",
    # names
    "C0103",
    # missing docstring
    "C0114", "C0115", "C0116",
    # duplicate code between files (dumb how far it overreaches)
    "R0801",
    # too many/few methods/arguments/X (splitting just makes the code messier)
    "R0902", "R0903", "R0904", "R0913", "R0914",
    # too many branches (mostly sanitization and formatting)
    "R0912"
]

[tool.pylint.MASTER]
# add novelai_api to the path, as pylint fails to detect the package (waiting for https://github.com/PyCQA/pylint/projects/1)
init-hook="""
from sys import path
from pylint.config import find_default_config_files
path.extend(p.parent for p in find_default_config_files())
"""

[tool.pytest.ini_options]
xfail_strict = true
empty_parameter_set_mark = "fail_at_collect"
asyncio_mode = "auto"
addopts = "--tb=short -vv"

[tool.poetry.scripts]
nai-pre-commit = "novelai_api.poetry_scripts:pre_commit"
nai-test-mock = "novelai_api.poetry_scripts:test_mock"
nai-test-api = "novelai_api.poetry_scripts:test_api"
nai-build-docs = "novelai_api.poetry_scripts:build_docs"
nai-bump-version = "novelai_api.poetry_scripts:bump_version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
